refactor(integrations): move youren dashboard to Django
